change index.html commit

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Naga Harish M Github pages</title>
   <style>
     body{
-      background: rgba(4,163,237,1);
-      color: #FFF;
+      background: #FFF;
+      color: rgba(4,163,237,1);
     }
     a, a:hover, a:active{
-      color:#FFF;
+      colorrgba(4,163,237,1);
       text-decoration: underline;
     }
   </style>
