Added jsDocs code

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <h2>Github pages</h2>
  <ol>
    <li> <a href="Colors-from-image/index.html" title="Colors from Image">Colors from Image</a></li>
+   <li> <a href="jsDoc-docs-sample/index.html" title="JSDocs">jsDocs sample</a></li>
  </ol>
 </body>
 
