--- a/Colors-from-image/index.html
+++ b/Colors-from-image/index.html
@@ -50,7 +50,12 @@
    <img src="rose.png" alt="Keyboard and Red Rose" onclick="imageSelected(this.src)"/>
    <img src="soi-red.png" alt="Me" onclick="imageSelected(this.src)"/>
 
-   <br/> <strong>* Hide functionality are invert color, find matching fore color for Bg color and rgb color to hex color code.</strong>
+   <br/> <strong>Hidden functionality are:</strong> 
+   <ul>
+     <li>Invert Color</li>
+     <li>Find Fore color based on Background color</li>
+     <li>RGB color to HEX color code</li>
+   </ul>
 </div>
 
   <div id="resultDiv">
