--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
    <li> <a href="Colors-from-image/index.html" title="Colors from Image">Colors from Image</a></li>
    <li> <a href="jsDoc-docs-sample/index.html" title="JSDocs">jsDocs sample</a></li>
    <li> <a href="http://dev3.shareourideas.com/words/" title="Today Concept">Today Concept ng2 demo</a></li>
+   <li> <a href="product-scanner/index.html" title="product-scanner POC">product-scanner POC</a></li>
+   
  </ol>
 </body>
 
