--- a/autocomplete-tries/index.html
+++ b/autocomplete-tries/index.html
@@ -7,7 +7,8 @@
     <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-    <input id="search" type="text">
+    <span> Sample data inserted for test was : <code>['Apple','Application','Ant','Bat','Ball','Car','Cat']</code></span>
+    <input id="search" type="text" placeholder="Type here e.g.:- ap">
     <ul id="list"></ul>
     <script src="./js/tries.js"></script>
     <script src="./js/script.js"></script>
