added link linspace function in plain Javascript

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <h2>Github pages</h2>
  <ol>
    <li> <a href="Colors-from-image/index.html" title="Colors from Image">Colors from Image</a></li>
+   <li> <a href="linspace/index.html" title="linspace function in plain Javascript">linspace function in plain Javascript</a></li>
    <li> <a href="jsDoc-docs-sample/index.html" title="JSDocs">jsDocs sample</a></li>
    <li> <a href="http://dev3.shareourideas.com/words/" title="Today Concept">Today Concept ng2 demo</a></li>
    <li> <a href="product-scanner/index.html" title="product-scanner POC">product-scanner POC</a></li>
    <li> <a href="autocomplete-tries/index.html" title="autocomplete trie data structure">autocomplete using trie data structure</a></li>
-   
  </ol>
 </body>
 
