--- a/linspace/index.html
+++ b/linspace/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <h2>linspace (<a href="https://numpy.org/doc/stable/reference/generated/numpy.linspace.html" title="numpy.linspace" target="_blank">numpy.linspace</a> or <a href="https://js.tensorflow.org/api/latest/#linspace" title="tf.linspace" target="_blank">tf.linspace</a> equivalent in Javascript)</h2>
-    <span>Note: After getting this linspace result, can plot on x and y axis in chart for example.<br/></span>
+    <span>Note: For example, after getting this linspace result, can plot on x and y axis in chart.<br/></span>
     <div><label for="startAt">Start At:</label> <input type="number" id="startAt" name="startAt" value="0" /></div>
     <div><label for="stopAt">Stop At:</label> <input type="number" id="stopAt" name="stopAt" value="9"/></div>
     <div><label for="cardinality">Cardinality:</label> <input type="number" id="cardinality" name="cardinality" value="10" /></div>
