--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
    <li> <a href="http://dev3.shareourideas.com/words/" title="Today Concept">Today Concept ng2 demo</a></li>
    <li> <a href="product-scanner/index.html" title="product-scanner POC">product-scanner POC</a></li>
    <li> <a href="autocomplete-tries/index.html" title="autocomplete trie data structure">autocomplete using trie data structure</a></li>
+   <li> <a href="form-builder-sample/index.html" title="Form builder sample - Drag and Drop">Form builder sample - Drag and Drop</a></li>
  </ol>
 </body>
 
