--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <script type="module">
-        // Import three
+        // Import three.
         import * as THREE from 'https://unpkg.com/three/build/three.module.js';
         // Import the default VRButton
         import { VRButton } from 'https://unpkg.com/three/examples/jsm/webxr/VRButton.js';
