Addeed video 2 cart

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
    <li> <a href="product-scanner/index.html" title="product-scanner POC">product-scanner POC</a></li>
    <li> <a href="autocomplete-tries/index.html" title="autocomplete trie data structure">autocomplete using trie data structure</a></li>
    <li> <a href="form-builder-sample/index.html" title="Form builder sample - Drag and Drop">Form builder sample - Drag and Drop</a></li>
+   <li> <a href="video2cart/index.html" title="JSDocs">Video to cart - POC (developed in 2015)</a></li>
  </ol>
 </body>
 
