--- a/video2cart/index.html
+++ b/video2cart/index.html
@@ -33,7 +33,8 @@
 		</article>
 	</section>
 	<footer>
-		<p>&copy; Copyright <a href="http://shareourideas.com/" title="Share our ideas - more you share, more you gain by Naga Harish">Naga Harish</a></p>
+		<p>&copy; Copyright <a href="http://shareourideas.com/" title="Share our ideas - more you share, more you gain by Naga Harish">Naga Harish</a></p> All source images and videos I don't have any rights it is just for demo. I can't take video and images of cart/links. 
+		<br/>Only for concept I did this. Incase any issue in source images pls let me know I will remove them.
 	</footer>
 	<script src="asset/js/script.js"></script>
 	<script src="asset/js/frames.js"></script>
